<resources>
    <string name="app_name">GsbRvAndroid</string>
    <string name="mat">Matricule : </string>
    <string name="mdp">Mot de passe : </string>
    <string name="btn_val">VALIDER</string>
    <string name="btn_ann">ANNULER</string>
    <string name="btn_consulte_rapport">CONSULTER UN RAPPORT DE VISITE</string>
    <string name="btn_saisie_rapport">SAISIR UN RAPPORT DE VISITE</string>
    <string name="mois">Mois : </string>
    <string name="annee">Année : </string>
    <string name="btn_afficher_rapport">AFFICHER LA LISTE DES RAPPORTS</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="list_rapport">Liste des rapports pour xxxxxxxx xxxx</string>
    <string name="titre_rapport">Rapport du xxxx-xx-xx</string>
    <string name="rapport">Rapport</string>
    <string name="rapportNum">Numero : x</string>
    <string name="rapportBilan">Bilan : xxxxxx</string>
    <string name="praticien">Praticien</string>

    <string name="praticienNom">Nom : xxxxx</string>
    <string name="praticienPrenom">Prenom : xxxxxxx</string>
    <string name="praticienVille">Ville : xxxxxxx</string>
    <string name="praticienCP">Code postal : xxxxxxx</string>
</resources>